--- a/assets/scss/partials/_layout.scss
+++ b/assets/scss/partials/_layout.scss
@@ -89,6 +89,7 @@ h6 {
 h1 {
   font-size: 225%;
   font-weight: 400;
+  word-break: break-all;
 }
 
 h2,
